@@ -15,6 +15,10 @@ Major changes since man-db 2.5.9:
 	o Wrap long table cells in man(1), fixing test failures with groff
 	  1.21.
 
+	o If an explicit section is passed to man, then pages that match
+	  that section exactly will be preferred over pages that only have
+	  that section as a prefix.
+
 	Improvements:
 	-------------
 
