@@ -1,3 +1,11 @@
+Tue Mar 15 10:52:58 GMT 2011  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (compare_candidates): If the user asked for an explicit
+	  section, sort exact matches first (Fedora bug #684977).
+	* src/tests/man-3: New file.
+	* src/tests/Makefile.am (ALL_TESTS): Add man-3.
+	* NEWS: Document this.
+
 Tue Mar 15 10:48:19 GMT 2011  Colin Watson  <cjwatson@debian.org>
 
 	* src/manp.c (add_sections): Put user entries in a separate list.
